[tool.poetry]
name = "rustsmith-tester"
version = "0.1.0"
description = ""
authors = ["Mayank Sharma <mayank.sharma.uk@gmail.com>"]

[tool.poetry.scripts]
rsmith-tester = "rustsmith_tester.main"

[tool.poetry.dependencies]
python = "^3.9"
docker = "^5.0.3"
greenstalk = "^2.0.0"
halo = "^0.0.31"
sanitize-filename = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
